# bevy_wasm

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: rust.yml
bevy_wasm/: Cargo.toml
bevy_wasm/src/: lib.rs  linker.rs  mod_state.rs  plugin.rs  resource.rs  systems.rs  wasm_asset.rs
bevy_wasm/src/components/: mod.rs  wasm_mod.rs
bevy_wasm/src/events/: mod.rs  resource_mutation.rs  resource_mutation_bundle.rs
bevy_wasm/src/resources/: mod.rs  wasm_engine.rs
bevy_wasm/src/runtime/: mod.rs
bevy_wasm/src/runtime/native/: mod.rs
bevy_wasm/src/runtime/web/: linker.rs  mod.rs
bevy_wasm/src/systems/: load_instances.rs  mod.rs  send_mutation_requests.rs  tick_mods.rs  update_shared_resource.rs
bevy_wasm_shared/: Cargo.toml
bevy_wasm_shared/src/: lib.rs  version.rs
bevy_wasm_sys/: Cargo.toml
bevy_wasm_sys/src/: events.rs  ffi.rs  ffi_plugin.rs  lib.rs  macros.rs  time.rs
bevy_wasm_sys/src/ecs/: extern_res.rs  mod.rs
examples/cubes/cubes/: Cargo.toml  build.rs
examples/cubes/cubes-protocol/: Cargo.toml
examples/cubes/cubes/assets/: .gitkeep
examples/cubes/cubes/src/: main.rs
examples/cubes/cubes_protocol/: Cargo.toml
examples/cubes/cubes_protocol/src/: lib.rs
examples/cubes/mod-with-bevy/: Cargo.toml
examples/cubes/mod-without-bevy/: Cargo.toml
examples/cubes/mod_with_bevy/: Cargo.toml
examples/cubes/mod_with_bevy/src/: lib.rs
examples/cubes/mod_without_bevy/: Cargo.toml
examples/cubes/mod_without_bevy/src/: lib.rs
examples/shared_resources/: README.md
examples/shared_resources/shared_resources/: Cargo.toml  README.md  build.rs
examples/shared_resources/shared_resources/src/: main.rs
examples/shared_resources/shared_resources_mod/: Cargo.toml
examples/shared_resources/shared_resources_mod/src/: lib.rs
examples/shared_resources/shared_resources_protocol/: Cargo.toml
examples/shared_resources/shared_resources_protocol/src/: lib.rs
examples/simple/: Cargo.toml  build.rs
examples/simple/protocol/: Cargo.toml
examples/simple/protocol/src/: lib.rs
examples/simple/scripts/: Cargo.toml
examples/simple/scripts/src/: lib.rs
examples/simple/simple/: Cargo.toml  build.rs
examples/simple/simple-protocol/: Cargo.toml
examples/simple/simple/src/: main.rs
examples/simple/simple_mod/: Cargo.toml
examples/simple/simple_mod/src/: lib.rs
examples/simple/simple_protocol/: Cargo.toml
examples/simple/simple_protocol/src/: lib.rs
examples/simple/src/: main.rs
examples/web/: index.html
src/: lib.rs
