[workspace]
members = [
  "bevy_wasm",
  "bevy_wasm_shared",
  "bevy_wasm_sys",
  "examples/cubes/cubes",
  "examples/cubes/cubes_protocol",
  "examples/cubes/mod_with_bevy",
  "examples/cubes/mod_without_bevy",
  "examples/simple/simple",
  "examples/simple/simple_mod",
  "examples/simple/simple_protocol",
]
resolver = "2"

[profile.release-wasm]
inherits = "release"
lto = true
opt-level = 's'
panic = "abort"
strip = true
