[workspace]
members = [
  "bevy_wasm",
  "bevy_wasm_shared",
  "bevy_wasm_sys",
  "examples/cubes/cubes",
  "examples/cubes/cubes_protocol",
  "examples/cubes/mod_with_bevy",
  "examples/cubes/mod_without_bevy",
  "examples/simple/simple",
  "examples/simple/simple_mod",
  "examples/simple/simple_protocol",
  "examples/shared_resources/shared_resources",
  "examples/shared_resources/shared_resources_mod",
  "examples/shared_resources/shared_resources_protocol",
]
resolver = "2"

[profile.release-wasm]
debug = true
inherits = "release"
lto = true
opt-level = 's'
panic = "unwind"
strip = false
