[package]
categories = ["wasm", "game-development"]
description = "Run WASM systems in Bevy"
edition = "2021"
keywords = ["bevy", "wasm", "webassembly", "game", "gamedev"]
license = "MIT OR Apache-2.0"
name = "bevy_wasm"
readme = "../README.md"
repository = "https://github.com/BrandonDyer64/bevy_wasm"
version = "0.9.9"

[dependencies]
anyhow = "1.0"
bevy_wasm_shared = {path = "../bevy_wasm_shared", version = "0.9"}
bincode = "1.3"
colored = "2.0"
serde = "1.0"
tracing = "0.1"
wasmtime = "5"

[dependencies.bevy]
default-features = false
version = "0.9"
