[package]
categories = ["wasm", "game-development"]
description = "Run WASM systems in Bevy"
edition = "2021"
keywords = ["bevy", "wasm", "webassembly", "game", "gamedev"]
license = "MIT OR Apache-2.0"
name = "bevy_wasm"
readme = "../README.md"
repository = "https://github.com/BrandonDyer64/bevy_wasm"
version = "0.10.0"

[dependencies]
anyhow = "1.0"
bevy_wasm_shared = {path = "../bevy_wasm_shared", version = "0.10"}
bincode = "1.3"
colored = "2.0"
futures = "0.3"
serde = "1.0"
tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = "5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[dependencies.bevy]
default-features = false
version = "0.10"
