[package]
categories = ["wasm", "game-development"]
description = "Run WASM systems in Bevy"
edition = "2021"
keywords = ["bevy", "wasm", "webassembly", "game", "gamedev"]
license = "MIT OR Apache-2.0"
name = "bevy_wasm_shared"
readme = "../README.md"
repository = "https://github.com/BrandonDyer64/bevy_wasm"
version = "0.9.8"

[dependencies]
