[package]
categories = ["wasm", "game-development"]
description = "Import into your wasm scripts. Use with the bevy_wasm crate."
edition = "2021"
keywords = ["bevy", "wasm", "webassembly", "game", "gamedev"]
license = "Apache-2.0 WITH LLVM-exception"
name = "bevy_wasm_sys"
readme = "../README.md"
repository = "https://github.com/BrandonDyer64/bevy_wasm"
version = "0.1.4"

[features]
bevy = ["bevy_app", "bevy_ecs"]
default = ["bevy"]

[dependencies]
bevy_app = {version = "0.9", optional = true}
bevy_derive = {version = "0.9", optional = true}
bevy_ecs = {version = "0.9", optional = true}
bincode = "1.3"
serde = "1.0"
