[package]
categories = ["wasm", "game-development"]
description = "Import into your wasm scripts. Use with the bevy_wasm crate."
edition = "2021"
keywords = ["bevy", "wasm", "webassembly", "game", "gamedev"]
license = "MIT OR Apache-2.0"
name = "bevy_wasm_sys"
readme = "../README.md"
repository = "https://github.com/BrandonDyer64/bevy_wasm"
version = "0.10.0"

[features]
bevy = ["bevy_app", "bevy_derive", "bevy_ecs", "bevy_math", "bevy_reflect", "bevy_transform"]
default = ["bevy"]

[dependencies]
bevy_app = {git = "https://github.com/bevyengine/bevy", optional = true}
bevy_derive = {git = "https://github.com/bevyengine/bevy", optional = true}
bevy_ecs = {git = "https://github.com/bevyengine/bevy", optional = true}
bevy_math = {git = "https://github.com/bevyengine/bevy", optional = true}
bevy_reflect = {git = "https://github.com/bevyengine/bevy", optional = true}
bevy_transform = {git = "https://github.com/bevyengine/bevy", optional = true, features = ["serialize"]}
bevy_wasm_shared = {path = "../bevy_wasm_shared", version = "0.10"}
bincode = "1.3"
serde = "1.0"
