[package]
build = "build.rs"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "shared_resources"
publish = false
version = "0.1.0"

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy"}
bevy_wasm = {path = "../../../bevy_wasm"}
shared_resources_protocol = {path = "../shared_resources_protocol"}
