[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "shared_resources_protocol"
publish = false
version = "0.1.0"

[dependencies]
bevy_derive = {git = "https://github.com/bevyengine/bevy"}
bevy_ecs = {git = "https://github.com/bevyengine/bevy"}
bevy_reflect = {git = "https://github.com/bevyengine/bevy"}
bevy_wasm_shared = {path = "../../../bevy_wasm_shared"}
serde = {version = "1.0", features = ["derive"]}
