[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "simple_mod"
version = "0.1.0"

[lib]
# Generate a `.wasm` file instead of a dll
crate-type = ["cdylib"]

[dependencies]
bevy_ecs = "0.10"
bevy_wasm_sys = {path = "../../../bevy_wasm_sys"}
serde = "1.0"
simple_protocol = {path = "../simple_protocol"}
